--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,8 +1,16 @@
+header{
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    background-color: $transparent;
+}
 .dog--container {
-    height: 640px;
+    
+    
+    height: 340px;
     width: 360px;
     background-color: $dog--orange-color;
-    border-radius: 8px 8px 50px 50px;
+    border-radius: 8px 8px 0px 0px;
 
     &--top {
         display: flex;
@@ -186,7 +194,7 @@
             }
         }
 
-        &--scroll {
+       /*  &--scroll {
             position: relative;
             display: flex;
             flex-direction: column;
@@ -241,7 +249,7 @@
                 animation: feetRotate 5s linear 1s 2 reverse none;
 
             }
-        }
+        } */
     }
 }
 
