--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
 @import "normalize";
 @import "variables";
 @import "basics";
-@import "sections/left";
-@import "sections/right";
+@import "header";
+@import "sections/main";
