--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,5 +29,6 @@ $font-family-paragraph: 'Raleway', sans-serif;
 
 $header-height: 256px;
 $content-width: 80vw;
-$section-height:100vh;
-$section-width:50vw;
+$main-height-desktop:100vh;
+$main-width-desktop:50vw;
+$main-width-mobile:100%;
