--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -1,37 +1,31 @@
-#left {
+#main {
     background-color: $transparent;
+    height: 100vh;
 
 }
 
 .box--container {
 
     width: 90%;
-    height: 90%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    &--welcome {
-        width: 100%;
-
-        background-color: $white;
-        border-radius: 15px;
-        padding: 2rem;
-        margin-bottom: 2rem;
-
-    }
+    
 
     &--content {
-        
 
-        height: calc(100% - 200px);
+
+        height: 100%;
         width: 100%;
         background-color: $white;
         border-radius: 15px;
         padding: 1.5rem;
         overflow-y: scroll;
         scroll-snap-type: y proximity;
-        
+
+       
 
         &>div {
             scroll-snap-align: center;
@@ -49,18 +43,27 @@
 
             display: flex;
             margin-bottom: 13rem;
-            
 
-            &-text>div {
-                display: flex;
-                flex-direction: column;
+
+
+            &-text {
+
+
+
+                &>div {
+                    display: flex;
+                    flex-direction: column;
+                    margin-bottom: 2rem;
+                }
             }
 
             &-portrait {
 
                 min-width: 50%;
+                height: 100%;
+
                 background-image: url(".\\img\\DrowsyTigerPromo.jpg");
-                
+
                 background-position: top center;
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -115,7 +118,7 @@
     background-size: cover;
     transition: all 0.8s ease-in-out;
     color: transparent;
-    
+
 
 
 
@@ -125,12 +128,11 @@
         box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
         height: 220px;
         color: $white;
-        
+
         transition: all 0.8s ease-in-out;
-        
+
 
 
 
     }
 }
-
