--- a/src/scss/_basics.scss
+++ b/src/scss/_basics.scss
@@ -1,63 +1,77 @@
-html{
+html {
     scroll-behavior: smooth;
 }
-body,header,main,footer,section,article,div{
+
+body,
+header,
+main,
+footer,
+section,
+article,
+div {
     box-sizing: border-box;
     font-family: $font-family-main;
-   
-    
+
+
 }
-h2{
-                    font-size: 2.5rem;
-                }
-p, span{
+
+h2 {
+    font-size: 2.5rem;
+}
+
+p,
+span {
     font-family: $font-family-paragraph;
 }
 
-ul{
+ul {
     list-style: none;
     margin-left: 0;
     padding-inline-start: 0;
-    
-    & li {
-        	display: grid;
-	grid-template-rows: 2fr 2fr;
-	grid-template-columns: 2fr 2fr;
-    row-gap: 1rem;
 
-        &> div{
+    & li {
+        display: grid;
+        grid-template-rows: 2fr 2fr;
+        grid-template-columns: 2fr 2fr;
+        row-gap: 1rem;
+        column-gap: 1rem;
+
+        &>div {
             display: flex;
             align-items: center;
             gap: 1rem;
-            
+
         }
     }
 }
 
-a{
+a {
     text-decoration: none;
     color: $color--text-light;
 
-    &:hover{
+    &:hover {
         color: $color--text-dark;
         text-decoration: overline;
     }
 }
-main{
-    height: $main-height-desktop;
-    width: $main-width-desktop;
-     @media only screen and (max-width: 600px) {
-            
-                width: $main-width-mobile;
-            
-        }
 
-  
+main {
+    //height: $main-height-desktop;
+    width: $main-width-desktop;
+
+    @media only screen and (max-width: 600px) {
+
+        width: $main-width-mobile;
+
+    }
+
+
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.page--container{
+
+.page--container {
     //position: fixed;
     width: 100vw;
     height: 100vh;
@@ -68,16 +82,28 @@ main{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    overflow-y: scroll;
 
-    
+    &::-webkit-scrollbar {
+            display: none;
+        }
+
+
 }
-footer{
+
+section{
+    display: flex;
+    flex-direction: column;
+    //height: 50vh;
+}
+
+footer {
     background-color: $dog--darkgray-color;
     position: absolute;
     bottom: 0;
     width: 100vw;
     height: 50px;
-    
+
     display: flex;
     justify-content: space-around;
 
@@ -86,7 +112,7 @@ footer{
         justify-content: space-between;
         list-style: none;
 
-        & li{
+        & li {
             margin-left: 3rem;
         }
     }
