--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,3 +3,6 @@
 @import "basics";
 @import "header";
 @import "sections/main";
+@import "sections/about";
+@import "sections/skills";
+@import "sections/portfolio";
