--- a/public/index.css
+++ b/public/index.css
@@ -346,7 +346,13 @@ html {
   scroll-behavior: smooth;
 }
 
-body, header, main, footer, section, article, div {
+body,
+header,
+main,
+footer,
+section,
+article,
+div {
   box-sizing: border-box;
   font-family: "Oswald", sans-serif;
 }
@@ -355,7 +361,8 @@ h2 {
   font-size: 2.5rem;
 }
 
-p, span {
+p,
+span {
   font-family: "Raleway", sans-serif;
 }
 
@@ -369,6 +376,7 @@ ul li {
   grid-template-rows: 2fr 2fr;
   grid-template-columns: 2fr 2fr;
   row-gap: 1rem;
+  column-gap: 1rem;
 }
 ul li > div {
   display: flex;
@@ -386,7 +394,6 @@ a:hover {
 }
 
 main {
-  height: 100vh;
   width: 50vw;
   display: flex;
   justify-content: center;
@@ -408,6 +415,15 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  overflow-y: scroll;
+}
+.page--container::-webkit-scrollbar {
+  display: none;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
@@ -433,6 +449,11 @@ header {
   display: flex;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.5);
+}
+@media only screen and (max-width: 600px) {
+  header {
+    width: 100%;
+  }
 }
 
 .dog--container {
@@ -687,64 +708,182 @@ header {
 }
 #main {
   background-color: rgba(255, 255, 255, 0.5);
-  height: 100vh;
 }
 
 .box--container {
   width: 90%;
-  height: 100%;
+  display: flex;
+  padding: 2rem;
+  flex-direction: column;
+  background-color: #ffffff;
+  border-radius: 8px;
+}
+
+/*  &--content {
+
+
+        height: 100%;
+        width: 100%;
+        background-color: $white;
+        border-radius: 15px;
+        padding: 1.5rem;
+        overflow-y: scroll;
+        scroll-snap-type: y proximity;
+
+
+
+        &>div {
+            scroll-snap-align: center;
+            height: 100%;
+        }
+
+
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
+
+        &--about {
+
+            display: flex;
+            margin-bottom: 13rem;
+
+
+
+            &-text {
+
+
+
+                &>div {
+                    display: flex;
+                    flex-direction: column;
+                    margin-bottom: 2rem;
+                }
+            }
+
+            &-portrait {
+
+                min-width: 50%;
+                height: 100%;
+
+                background-image: url(".\\img\\DrowsyTigerPromo.jpg");
+
+                background-position: top center;
+                background-size: contain;
+                background-repeat: no-repeat;
+                border-radius: 8px;
+                margin-left: 1rem;
+                margin-top: 1.5rem;
+            }
+        }
+
+        &--education {
+
+            margin-top: 2rem;
+        }
+
+        &--portfolio {
+
+
+
+            &-projects {
+                display: flex;
+                flex-wrap: wrap;
+
+
+                justify-content: space-around;
+                align-items: center;
+                gap: 1rem 1rem;
+                margin: 1rem;
+
+                &>div {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    height: 170px;
+                    width: 170px;
+                    border-radius: 8px;
+
+                    padding: 1rem;
+
+                    flex: 0 0 25%;
+                }
+
+
+            }
+
+        }
+    }
+
+
+.card {
+    //background-image: url(".\\img\\projects\\beach.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: all 0.8s ease-in-out;
+    color: transparent;
+
+
+
+
+
+
+    &:hover {
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+        height: 220px;
+        color: $white;
+
+        transition: all 0.8s ease-in-out;
+
+
+
+
+    }
+} */
+#about {
+  display: flex;
+  flex-direction: column;
+}
+
+.about--content {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.box--container--content {
   height: 100%;
   width: 100%;
-  background-color: #ffffff;
-  border-radius: 15px;
-  padding: 1.5rem;
-  overflow-y: scroll;
-  scroll-snap-type: y proximity;
 }
-.box--container--content > div {
-  scroll-snap-align: center;
-  height: 100%;
-}
-.box--container--content::-webkit-scrollbar {
-  display: none;
-}
-.box--container--content--about {
-  display: flex;
-  margin-bottom: 13rem;
-}
-.box--container--content--about-text > div {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
-}
-.box--container--content--about-portrait {
+.about--content-portrait {
   min-width: 50%;
-  height: 100%;
+  min-height: 300px;
   background-image: url(".\\img\\DrowsyTigerPromo.jpg");
-  background-position: top center;
+  background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 8px;
   margin-left: 1rem;
-  margin-top: 1.5rem;
 }
-.box--container--content--education {
-  margin-top: 2rem;
+
+.skills--content {
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
-.box--container--content--portfolio-projects {
+.skills--content li:nth-child(even) {
+  margin-left: 2rem;
+}
+
+.portfolio--content-projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   gap: 1rem 1rem;
   margin: 1rem;
+  min-width: 200px;
+  min-height: 200px;
 }
-.box--container--content--portfolio-projects > div {
+.portfolio--content-projects > div {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -752,7 +891,7 @@ header {
   width: 170px;
   border-radius: 8px;
   padding: 1rem;
-  flex: 0 0 25%;
+  flex: 1 0 25%;
 }
 
 .card {
@@ -761,11 +900,32 @@ header {
   transition: all 0.8s ease-in-out;
   color: transparent;
 }
+@media only screen and (max-width: 600px) {
+  .card {
+    color: #ffffff;
+    animation: boxShadow 10s ease-in-out 0s infinite normal forwards;
+    box-shadow: #26394d 0px 20px 30px -10px;
+  }
+}
+.card--text {
+  display: flex;
+  flex-direction: column;
+}
 .card:hover {
-  box-shadow: #26394d 0px 20px 30px -10px;
   height: 220px;
   color: #ffffff;
+  box-shadow: #26394d 0px 20px 30px -10px;
   transition: all 0.8s ease-in-out;
+}
+
+/* Animation */
+@keyframes boxShadow {
+  0%, 50%, 100% {
+    box-shadow: none;
+  }
+  25%, 75% {
+    box-shadow: #26394d 0px 20px 30px -10px;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
