--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -1,20 +1,27 @@
 #main {
     background-color: $transparent;
-    height: 100vh;
+    //height: 100%;
+    //overflow-y: scroll;
 
 }
 
 .box--container {
 
     width: 90%;
-    height: 100%;
+    //height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-
+    padding: 2rem;
+    //align-items: center;
+    flex-direction: column;
+    background-color: $white;
+    border-radius: 8px;
+    //overflow-y: scroll;
     
+}
 
-    &--content {
+
+
+   /*  &--content {
 
 
         height: 100%;
@@ -110,7 +117,7 @@
 
         }
     }
-}
+
 
 .card {
     //background-image: url(".\\img\\projects\\beach.jpg");
@@ -135,4 +142,4 @@
 
 
     }
-}
+} */
