--- a/public/index.css
+++ b/public/index.css
@@ -396,8 +396,11 @@ a:hover {
 main {
   width: 50vw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 @media only screen and (max-width: 600px) {
   main {
@@ -407,7 +410,6 @@ main {
 
 .page--container {
   width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -415,7 +417,6 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  overflow-y: scroll;
 }
 .page--container::-webkit-scrollbar {
   display: none;
@@ -445,10 +446,11 @@ footer ul li {
 }
 
 header {
-  width: 50vw;
+  position: sticky;
+  top: -290px;
+  width: 100vw;
   display: flex;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 0.5);
 }
 @media only screen and (max-width: 600px) {
   header {
@@ -718,129 +720,6 @@ header {
   background-color: #ffffff;
   border-radius: 8px;
 }
-
-/*  &--content {
-
-
-        height: 100%;
-        width: 100%;
-        background-color: $white;
-        border-radius: 15px;
-        padding: 1.5rem;
-        overflow-y: scroll;
-        scroll-snap-type: y proximity;
-
-
-
-        &>div {
-            scroll-snap-align: center;
-            height: 100%;
-        }
-
-
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
-
-
-        &--about {
-
-            display: flex;
-            margin-bottom: 13rem;
-
-
-
-            &-text {
-
-
-
-                &>div {
-                    display: flex;
-                    flex-direction: column;
-                    margin-bottom: 2rem;
-                }
-            }
-
-            &-portrait {
-
-                min-width: 50%;
-                height: 100%;
-
-                background-image: url(".\\img\\DrowsyTigerPromo.jpg");
-
-                background-position: top center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                border-radius: 8px;
-                margin-left: 1rem;
-                margin-top: 1.5rem;
-            }
-        }
-
-        &--education {
-
-            margin-top: 2rem;
-        }
-
-        &--portfolio {
-
-
-
-            &-projects {
-                display: flex;
-                flex-wrap: wrap;
-
-
-                justify-content: space-around;
-                align-items: center;
-                gap: 1rem 1rem;
-                margin: 1rem;
-
-                &>div {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-end;
-                    height: 170px;
-                    width: 170px;
-                    border-radius: 8px;
-
-                    padding: 1rem;
-
-                    flex: 0 0 25%;
-                }
-
-
-            }
-
-        }
-    }
-
-
-.card {
-    //background-image: url(".\\img\\projects\\beach.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    transition: all 0.8s ease-in-out;
-    color: transparent;
-
-
-
-
-
-
-    &:hover {
-        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-        height: 220px;
-        color: $white;
-
-        transition: all 0.8s ease-in-out;
-
-
-
-
-    }
-} */
 #about {
   display: flex;
   flex-direction: column;
