--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -1,11 +1,14 @@
 #main {
     background-color: $transparent;
+    
+
     //height: 100%;
     //overflow-y: scroll;
 
 }
 
 .box--container {
+   
 
     width: 90%;
     //height: 100%;
@@ -16,130 +19,7 @@
     background-color: $white;
     border-radius: 8px;
     //overflow-y: scroll;
-    
+
+    &-content {}
+
 }
-
-
-
-   /*  &--content {
-
-
-        height: 100%;
-        width: 100%;
-        background-color: $white;
-        border-radius: 15px;
-        padding: 1.5rem;
-        overflow-y: scroll;
-        scroll-snap-type: y proximity;
-
-       
-
-        &>div {
-            scroll-snap-align: center;
-            height: 100%;
-        }
-
-
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
-
-
-        &--about {
-
-            display: flex;
-            margin-bottom: 13rem;
-
-
-
-            &-text {
-
-
-
-                &>div {
-                    display: flex;
-                    flex-direction: column;
-                    margin-bottom: 2rem;
-                }
-            }
-
-            &-portrait {
-
-                min-width: 50%;
-                height: 100%;
-
-                background-image: url(".\\img\\DrowsyTigerPromo.jpg");
-
-                background-position: top center;
-                background-size: contain;
-                background-repeat: no-repeat;
-                border-radius: 8px;
-                margin-left: 1rem;
-                margin-top: 1.5rem;
-            }
-        }
-
-        &--education {
-
-            margin-top: 2rem;
-        }
-
-        &--portfolio {
-
-
-
-            &-projects {
-                display: flex;
-                flex-wrap: wrap;
-
-
-                justify-content: space-around;
-                align-items: center;
-                gap: 1rem 1rem;
-                margin: 1rem;
-
-                &>div {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-end;
-                    height: 170px;
-                    width: 170px;
-                    border-radius: 8px;
-
-                    padding: 1rem;
-
-                    flex: 0 0 25%;
-                }
-
-
-            }
-
-        }
-    }
-
-
-.card {
-    //background-image: url(".\\img\\projects\\beach.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    transition: all 0.8s ease-in-out;
-    color: transparent;
-
-
-
-
-
-
-    &:hover {
-        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-        height: 220px;
-        color: $white;
-
-        transition: all 0.8s ease-in-out;
-
-
-
-
-    }
-} */
