--- a/src/scss/_basics.scss
+++ b/src/scss/_basics.scss
@@ -1,5 +1,8 @@
 html {
     scroll-behavior: smooth;
+    
+    
+    
 }
 
 body,
@@ -11,8 +14,38 @@ article,
 div {
     box-sizing: border-box;
     font-family: $font-family-main;
+    
+    &::-webkit-scrollbar{
+        display: none;
+    }
 
 
+}
+.page--container {
+    
+    width: 100vw;
+    //height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("./img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    overflow-x: hidden;
+    
+
+    
+    
+
+    &::-webkit-scrollbar {
+            display: none;
+        }
+
+
+}
+h1{
+    font-size: 3.5rem;
 }
 
 h2 {
@@ -77,36 +110,21 @@ main {
     align-items: center; */
 }
 
-.page--container {
-    
-    width: 100vw;
-    //height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: url("./img/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    //overflow-y: scroll;
 
-    &::-webkit-scrollbar {
-            display: none;
-        }
-
-
-}
 
 section{
     display: flex;
     flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid black;
     //height: 50vh;
     
 }
 
 footer {
     background-color: $dog--darkgray-color;
-    position: absolute;
+    //position: absolute;
     bottom: 0;
     width: 100vw;
     height: 50px;
