--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,8 @@
 @import "variables";
 @import "basics";
 @import "header";
+@import "sections/welcome";
+@import "sections/education";
 @import "sections/main";
 @import "sections/about";
 @import "sections/skills";
