--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -6,11 +6,14 @@
 
 .about--content {
     display: flex;
-    justify-content: center;
+    //justify-content: center;
     align-items: center;
-    //flex-wrap: wrap;
+    
     height: 100%;
     width: 100%;
+    & div > *{
+        display: flex;
+    }
 
     
 
