--- a/public/index.css
+++ b/public/index.css
@@ -396,20 +396,6 @@ span {
 
 ul {
   list-style: none;
-  margin-left: 0;
-  padding-inline-start: 0;
-}
-ul li {
-  display: grid;
-  grid-template-rows: 2fr 2fr;
-  grid-template-columns: 2fr 2fr;
-  row-gap: 1rem;
-  column-gap: 1rem;
-}
-ul li > div {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
 }
 
 a {
@@ -733,8 +719,23 @@ header {
   border-bottom: 1px solid black;
 }
 
-.education--content {
-  /* timeline kommt hierhin */
+.education--content ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 1rem;
+}
+.education--content ul:hover {
+  box-shadow: #26394d 0px 20px 30px -10px;
+  transition: all 0.8s ease-in-out;
+}
+.education--content ul:nth-child(even) {
+  align-items: flex-end;
+}
+.education--content ul li {
+  width: 50%;
+  border-left: 2px solid #6E8894;
+  padding-left: 1rem;
 }
 
 #main {
@@ -749,6 +750,7 @@ header {
   background-color: #ffffff;
   border-radius: 8px 8px 0 0;
 }
+
 #about {
   display: flex;
   flex-direction: column;
