--- a/public/index.css
+++ b/public/index.css
@@ -387,6 +387,9 @@ h1 {
 
 h2 {
   font-size: 2.5rem;
+  border: 0.5rem dotted black;
+  text-align: center;
+  padding: 2rem 0rem;
 }
 
 p,
@@ -428,23 +431,6 @@ section {
   padding-top: 2rem;
   padding-bottom: 2rem;
   border-bottom: 1px solid black;
-}
-
-footer {
-  background-color: #6E8894;
-  bottom: 0;
-  width: 100vw;
-  height: 50px;
-  display: flex;
-  justify-content: space-around;
-}
-footer ul {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-}
-footer ul li {
-  margin-left: 3rem;
 }
 
 header {
@@ -749,7 +735,6 @@ header {
   padding: 2rem;
   flex-direction: column;
   background-color: #ffffff;
-  border-radius: 8px 8px 0 0;
 }
 
 #about {
@@ -848,6 +833,51 @@ header {
   25%, 75% {
     box-shadow: #26394d 0px 20px 30px -10px;
   }
+}
+footer {
+  background-color: #E0F2E9;
+  bottom: 0;
+  width: 100vw;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer--content {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  gap: 1rem;
+}
+
+.button {
+  background-color: white;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #e7e7e7;
+}
+
+.button1:hover {
+  background-color: #e7e7e7;
+}
+
+.impressum {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=index.css.map */
