--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -17,7 +17,7 @@
     //align-items: center;
     flex-direction: column;
     background-color: $white;
-    border-radius: 8px 8px 0 0;
+    //border-radius: 8px 8px 0 0;
     //overflow-y: scroll;
 
     //&-content {}
