--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -11,8 +11,21 @@
     
     height: 100%;
     width: 100%;
+    
+    &-items{
+        
+        :last-child{
+            padding: 1rem;
+            border: 1px solid black;
+            border-radius: 8px;
+            
+        }
+        }
     & div > *{
         display: flex;
+        padding-bottom: 0.5rem;
+
+        
     }
 
     
