--- a/src/scss/sections/_education.scss
+++ b/src/scss/sections/_education.scss
@@ -15,8 +15,8 @@
             
             //color: $white;
             box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-
-            transition: all 0.8s ease-in-out;
+            transition:  0.4s ease-in-out;
+            border-top: 4px solid $dog--darkgray-color;
             
 
         }
