--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: $dog--lightgray-color;
+    background-color: $dog--darkgray-color;
 
     bottom: 0;
     width: 100vw;
