--- a/public/index.css
+++ b/public/index.css
@@ -842,6 +842,7 @@ header {
   flex-direction: column;
 }
 .card:hover {
+  display: flex;
   height: 220px;
   color: #ffffff;
   box-shadow: #26394d 0px 20px 30px -10px;
@@ -857,6 +858,16 @@ header {
     box-shadow: #26394d 0px 20px 30px -10px;
   }
 }
+.share img {
+  height: 2rem;
+  padding: 0.5rem;
+  border-radius: 50%;
+  opacity: 1;
+}
+.share a :hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 footer {
   background-color: #6E8894;
   bottom: 0;
@@ -869,9 +880,10 @@ footer {
 
 .footer--content {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   align-items: center;
   gap: 1rem;
+  color: white;
 }
 
 .button {
@@ -896,6 +908,11 @@ footer {
 
 .button1:hover {
   background-color: #e7e7e7;
+}
+
+.impressum {
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=index.css.map */
