--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -14,9 +14,10 @@ footer {
 
 .footer--content{
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     align-items: center;
     gap: 1rem;
+    color: white;
     
 }
 .button {
@@ -44,3 +45,8 @@ footer {
   background-color: #e7e7e7;
 }
 
+.impressum{
+    display: flex;
+    flex-direction: column;
+
+}
